--- a/home.html
+++ b/home.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="assets/css/base.css">
     <link rel="stylesheet" href="assets/css/home.css">
     <link rel="stylesheet" href="assets/font/themify-icons/themify-icons.css">
-    <title>ShopNuocHoa</title>
+    <title>AmoraShop</title>
 
 </head>
 <body>
@@ -19,10 +19,10 @@
             </div>
             <ul class="utility-list">
                 <li class="utility-item">
-                    <a class="ti-search header-icon"></a>
+                    <a class="ti-user header-icon"></a>
                 </li>
                 <li class="utility-item">
-                    <a class="ti-user header-icon"></a>
+                    <a class="ti-search header-icon"></a>
                 </li>
                 <li class="utility-item">
                     <a class="ti-shopping-cart header-icon"></a>
@@ -31,10 +31,10 @@
         </div>
         <div class="header-nav-down">
             <ul class="main-menu-list">
-                <li class="main-menu-item">SHOP</li>
-                <li class="main-menu-item">BRAND</li>
-                <li class="main-menu-item">NEW ARRIVALS</li>
-                <li class="main-menu-item">SALE</li>
+                <li class="main-menu-item col-4">SHOP</li>
+                <li class="main-menu-item col-4">BRAND</li>
+                <li class="main-menu-item col-4">NEW ARRIVALS</li>
+                <li class="main-menu-item col-4">SALE</li>
             </ul>
         </div>
     </header>
