--- a/home.html
+++ b/home.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="node_modules/bootstrap/dist/js/bootstrap.bundle.js">
     <link rel="stylesheet" href="assets/css/base.css">
     <link rel="stylesheet" href="assets/css/home.css">
-
+    <link rel="icon" type="image/png" href="assets/images/LogoDoneEdited.png"/>
     <title>AmoraShop</title>
 
 </head>
