mostly done show products list page, product detail page

--- a/products.html
+++ b/products.html
@@ -121,7 +121,272 @@
                 </div>
                 
                 <div class="right-product-list col-9">
-                    
+                    <div class="product-list-header">
+                        <h2 class="category-title">All products</h2>
+                        <div class="category-sort-cotainer">
+                            <select class="category-sort-options">
+                                <option value="feature">Feature products</option>
+                                <option value="price-asc">Price: Ascending</option>
+                                <option value="price-des">Price: Descending</option>
+                                <option value="name-a-z">Name: A-Z</option>
+                                <option value="name-z-a">Name: Z-A</option>
+                            </select>
+                        </div>
+                    </div>
+
+                    <div class="product-list-container row">
+
+                        <div class="product-items col-3">
+                            <div class="product-img-wrap">
+                                <img class="product-img img-fluid" src="./assets/images/FreshOcean.png" alt="FreshOcean" >
+                            </div>
+                            <div class="product-name">
+                                Fresh Ocean
+                            </div>
+                            <div class="product-price">
+                                $70
+                            </div>
+                        </div>
+
+                        <div class="product-items col-3">
+                            <div class="product-img-wrap">
+                                <img class="product-img img-fluid" src="./assets/images/FreshOcean.png" alt="FreshOcean" >
+                            </div>
+                            <div class="product-name">
+                                Fresh Ocean
+                            </div>
+                            <div class="product-price">
+                                $70
+                            </div>
+                        </div>
+
+                        <div class="product-items col-3">
+                            <div class="product-img-wrap">
+                                <img class="product-img img-fluid" src="./assets/images/FreshOcean.png" alt="FreshOcean" >
+                            </div>
+                            <div class="product-name">
+                                Fresh Ocean
+                            </div>
+                            <div class="product-price">
+                                $70
+                            </div>
+                        </div>
+
+                        <div class="product-items col-3">
+                            <div class="product-img-wrap">
+                                <img class="product-img img-fluid" src="./assets/images/FreshOcean.png" alt="FreshOcean" >
+                            </div>
+                            <div class="product-name">
+                                Fresh Ocean
+                            </div>
+                            <div class="product-price">
+                                $70
+                            </div>
+                        </div>
+
+                        <div class="product-items col-3">
+                            <div class="product-img-wrap">
+                                <img class="product-img img-fluid" src="./assets/images/FreshOcean.png" alt="FreshOcean" >
+                            </div>
+                            <div class="product-name">
+                                Fresh Ocean
+                            </div>
+                            <div class="product-price">
+                                $70
+                            </div>
+                        </div>
+
+                        <div class="product-items col-3">
+                            <div class="product-img-wrap">
+                                <img class="product-img img-fluid" src="./assets/images/FreshOcean.png" alt="FreshOcean" >
+                            </div>
+                            <div class="product-name">
+                                Fresh Ocean
+                            </div>
+                            <div class="product-price">
+                                $70
+                            </div>
+                        </div>
+
+                        <div class="product-items col-3">
+                            <div class="product-img-wrap">
+                                <img class="product-img img-fluid" src="./assets/images/FreshOcean.png" alt="FreshOcean" >
+                            </div>
+                            <div class="product-name">
+                                Fresh Ocean
+                            </div>
+                            <div class="product-price">
+                                $70
+                            </div>
+                        </div>
+
+                        <div class="product-items col-3">
+                            <div class="product-img-wrap">
+                                <img class="product-img img-fluid" src="./assets/images/FreshOcean.png" alt="FreshOcean" >
+                            </div>
+                            <div class="product-name">
+                                Fresh Ocean
+                            </div>
+                            <div class="product-price">
+                                $70
+                            </div>
+                        </div>
+
+                        <div class="product-items col-3">
+                            <div class="product-img-wrap">
+                                <img class="product-img img-fluid" src="./assets/images/FreshOcean.png" alt="FreshOcean" >
+                            </div>
+                            <div class="product-name">
+                                Fresh Ocean
+                            </div>
+                            <div class="product-price">
+                                $70
+                            </div>
+                        </div>
+
+                        <div class="product-items col-3">
+                            <div class="product-img-wrap">
+                                <img class="product-img img-fluid" src="./assets/images/FreshOcean.png" alt="FreshOcean" >
+                            </div>
+                            <div class="product-name">
+                                Fresh Ocean
+                            </div>
+                            <div class="product-price">
+                                $70
+                            </div>
+                        </div>
+
+                        <div class="product-items col-3">
+                            <div class="product-img-wrap">
+                                <img class="product-img img-fluid" src="./assets/images/FreshOcean.png" alt="FreshOcean" >
+                            </div>
+                            <div class="product-name">
+                                Fresh Ocean
+                            </div>
+                            <div class="product-price">
+                                $70
+                            </div>
+                        </div>
+
+                        <div class="product-items col-3">
+                            <div class="product-img-wrap">
+                                <img class="product-img img-fluid" src="./assets/images/FreshOcean.png" alt="FreshOcean" >
+                            </div>
+                            <div class="product-name">
+                                Fresh Ocean
+                            </div>
+                            <div class="product-price">
+                                $70
+                            </div>
+                        </div>
+
+                        <div class="product-items col-3">
+                            <div class="product-img-wrap">
+                                <img class="product-img img-fluid" src="./assets/images/FreshOcean.png" alt="FreshOcean" >
+                            </div>
+                            <div class="product-name">
+                                Fresh Ocean
+                            </div>
+                            <div class="product-price">
+                                $70
+                            </div>
+                        </div>
+
+                        <div class="product-items col-3">
+                            <div class="product-img-wrap">
+                                <img class="product-img img-fluid" src="./assets/images/FreshOcean.png" alt="FreshOcean" >
+                            </div>
+                            <div class="product-name">
+                                Fresh Ocean
+                            </div>
+                            <div class="product-price">
+                                $70
+                            </div>
+                        </div>
+
+                        <div class="product-items col-3">
+                            <div class="product-img-wrap">
+                                <img class="product-img img-fluid" src="./assets/images/FreshOcean.png" alt="FreshOcean" >
+                            </div>
+                            <div class="product-name">
+                                Fresh Ocean
+                            </div>
+                            <div class="product-price">
+                                $70
+                            </div>
+                        </div>
+
+                        <div class="product-items col-3">
+                            <div class="product-img-wrap">
+                                <img class="product-img img-fluid" src="./assets/images/FreshOcean.png" alt="FreshOcean" >
+                            </div>
+                            <div class="product-name">
+                                Fresh Ocean
+                            </div>
+                            <div class="product-price">
+                                $70
+                            </div>
+                        </div>
+
+                        <div class="product-items col-3">
+                            <div class="product-img-wrap">
+                                <img class="product-img img-fluid" src="./assets/images/FreshOcean.png" alt="FreshOcean" >
+                            </div>
+                            <div class="product-name">
+                                Fresh Ocean
+                            </div>
+                            <div class="product-price">
+                                $70
+                            </div>
+                        </div>
+
+                        <div class="product-items col-3">
+                            <div class="product-img-wrap">
+                                <img class="product-img img-fluid" src="./assets/images/FreshOcean.png" alt="FreshOcean" >
+                            </div>
+                            <div class="product-name">
+                                Fresh Ocean
+                            </div>
+                            <div class="product-price">
+                                $70
+                            </div>
+                        </div>
+
+                        <div class="product-items col-3">
+                            <div class="product-img-wrap">
+                                <img class="product-img img-fluid" src="./assets/images/FreshOcean.png" alt="FreshOcean" >
+                            </div>
+                            <div class="product-name">
+                                Fresh Ocean
+                            </div>
+                            <div class="product-price">
+                                $70
+                            </div>
+                        </div>
+
+                        <div class="product-items col-3">
+                            <div class="product-img-wrap">
+                                <img class="product-img img-fluid" src="./assets/images/FreshOcean.png" alt="FreshOcean" >
+                            </div>
+                            <div class="product-name">
+                                Fresh Ocean
+                            </div>
+                            <div class="product-price">
+                                $70
+                            </div>
+                        </div>
+
+                        <!-- Move to next page -->
+                        <div class="pagination">
+                            <span class="page-node current">1</span>
+                            <a href="" class="page-node">2</a>
+                            <a href="" class="page-node">3</a>
+                            <span href="" class="page-node">...</span>
+                            <a href="" class="page-node">7</a>
+                            <a href="" class="next-page-node"><img src="assets/font/east_black_24dp.svg" alt=""></a>
+                        </div>
+                    </div>
+
                 </div>
             </div>
 
