--- a/product-detail.html
+++ b/product-detail.html
@@ -74,7 +74,7 @@
             <div class="product-detail-container row">
 
                 <div class="product-wrap col-5">
-                    <div class="product-img-wrap product-detail-wrap">
+                    <div class="product-detail-wrap product-img-wrap">
                         <img src="assets/images/FreshOcean.png" alt="Fresh Ocean" class="product-img img-fluid">
                     </div>
                 </div>
