--- a/products.html
+++ b/products.html
@@ -42,9 +42,11 @@
                     <a class="header-nav-link" href="home.html">
                         <li class="main-menu-item">Home</li>
                     </a>
-                    <a class="header-nav-link" href="products.html">
-                        <li class="main-menu-item">Shop</li>
-                    </a>
+                    <form action="ShowProductController" method="POST">
+                        <a class="header-nav-link" href="/AmoraShop/products-user-page.jsp">
+                            <input type="submit" class="main-menu-item" value="Shop">
+                        </a>
+                    </form>
                     <a class="header-nav-link" href="">
                         <li class="main-menu-item">Brand</li>
                     </a>
@@ -72,11 +74,79 @@
             </div>
 
             <div class="products-body row">
-                <div class="left-nav-container col-3">
-                    <div class="left-nav-filter">
+                <div class="left-nav-container col-2">
+                    <div id="tree" class="left-nav-filter">
+                        <ul>
+                            <li>
+                                <label for="node-1">Brands</label>
+                                <input type="checkbox" id="node-1" />
+                                <ul>
+                                    <li>
+                                        <a class="category-item" for="node-1-1">Chanel</a>
+                                    </li>
+                                    <li>
+                                        <a class="category-item" for="node-1-2">Dior</a>
+                                    </li>
+                                    <li>
+                                        <a class="category-item" for="node-1-2">Lancôme</a>
+                                    </li>
+                                    <li>
+                                        <a class="category-item" for="node-1-2">Guerlain</a>
+                                    </li>
+                                    <li>
+                                        <a class="category-item" for="node-1-2">Thierry Mugler</a>
+                                    </li>
+                                </ul>
+                            </li>
+                        </ul>
+                        <ul>
+                            <li>
+                                <label for="node-2">For Man</label>
+                                <input type="checkbox" id="node-2" />
+                                <ul>
+                                    <li>
+                                        <a class="category-item" for="node-2-1">Chanel</a>
+                                    </li>
+                                    <li>
+                                        <a class="category-item" for="node-2-2">Dior</a>
+                                    </li>
+                                    <li>
+                                        <a class="category-item" for="node-2-2">Lancôme</a>
+                                    </li>
+                                    <li>
+                                        <a class="category-item" for="node-2-2">Guerlain</a>
+                                    </li>
+                                    <li>
+                                        <a class="category-item" for="node-2-2">Thierry Mugler</a>
+                                    </li>
+                                </ul>
+                            </li>
+                            <li>
+                                <label for="node-3">For Woman</label>
+                                <input type="checkbox" id="node-3" />
+                                <ul>
+                                    <li>
+                                        <a class="category-item" for="node-3-1">Chanel</a>
+                                    </li>
+                                    <li>
+                                        <a class="category-item" for="node-3-2">Dior</a>
+                                    </li>
+                                    <li>
+                                        <a class="category-item" for="node-3-2">Lancôme</a>
+                                    </li>
+                                    <li>
+                                        <a class="category-item" for="node-3-2">Guerlain</a>
+                                    </li>
+                                    <li>
+                                        <a class="category-item" for="node-3-2">Thierry Mugler</a>
+                                    </li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </div>
+                    <!-- <div class="left-nav-filter">
                         <a href="#" class="main-filter-container" title="Brands">
                             <span>Brands</span>
-    
                             <ul class="sub-product-category">
                                 <li class="category-item">Chanel</li>
                                 <li class="category-item">Dior</li>
@@ -117,10 +187,10 @@
                                 <li class="category-item">Winter</li> 
                             </ul>
                         </a>  
-                    </div>
+                    </div> -->
                 </div>
                 
-                <div class="right-product-list col-9">
+                <div class="right-product-list col-10">
                     <div class="product-list-header">
                         <h2 class="category-title">All products</h2>
                         <div class="category-sort-cotainer">
@@ -433,7 +503,7 @@
         </footer>
 
     </wrapper>
-
+    <script src="assets/js/script.js"></script>
 </body>
 
 </html>
