--- a/login.html
+++ b/login.html
@@ -80,9 +80,10 @@
                         <p class="text-center fw-bold mx-3 mb-0 text-muted">OR</p>
                     </div>
 
-                    <a class="btn btn-primary btn-lg btn-block" style="background-color: #3b5998" href="#!"
+                    <a class="btn btn-primary btn-lg btn-block" style="background-color: #4285f4" href="#!"
                         role="button">
-                        <i class="fab fa-facebook-f me-2"></i>Continue with Facebook
+                        Continue with Google
+                        <img class="action-login-google-icon" src="assets/font/Google__G__Logo.svg" alt="Google logo">
                     </a>
                 </form>
             </div>
