--- a/testUI.html
+++ b/testUI.html
@@ -5,8 +5,125 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="assets/css/testCss.css">
     <title>Document</title>
     <style>
+        .slider {
+            position: relative;
+        }
+
+        .slide {
+            position: absolute;
+            top: 0;
+            left: 0;
+            opacity: 0;
+            transition: opacity 1s ease-in-out;
+        }
+
+        .slide.active {
+            opacity: 1;
+        }
+    </style>
+</head>
+
+<body>
+
+<div class="slide-wrap">
+    <div class="slider">
+        <img class="slide" src="assets/images/perfume-quotes-1.jpg">
+        <img class="slide" src="assets/images/perfume-quotes-3-attraction-scaled.jpg">
+        <img class="slide" src="assets/images/perfume-quotes-4-love.jpg">
+    </div>
+</div>
+
+
+    <Script>
+        const slides = document.querySelectorAll('.slide');
+        let currentSlide = 0;
+
+        // Set initial active slide
+        slides[currentSlide].classList.add('active');
+
+        // Change slide every 3 seconds
+        setInterval(() => {
+            // Remove active class from current slide
+            slides[currentSlide].classList.remove('active');
+
+            // Move to next slide
+            currentSlide = (currentSlide + 1) % slides.length;
+
+            // Add active class to next slide
+            slides[currentSlide].classList.add('active');
+        }, 3000);
+
+    </Script>
+</body>
+
+</html>
+
+
+
+<!-- Tree Node -->
+<!-- <div id="tree">
+    <ul>
+        <li>
+            <label for="node-1">Node 1</label>
+            <input type="checkbox" id="node-1" />
+            <ul>
+                <li>
+                    <label for="node-1-1">Node 1-1</label>
+                    <input type="checkbox" id="node-1-1" />
+                    <ul>
+                        <li>
+                            <label for="node-1-1-1">Node 1-1-1</label>
+                            <input type="checkbox" id="node-1-1-1" />
+                            <ul>
+                                <li>
+                                    <label for="node-1-1-1-1">Node 1-1-1-1</label>
+                                    <input type="checkbox" id="node-1-1-1-1" />
+                                </li>
+                            </ul>
+                        </li>
+                        <li>
+                            <label for="node-1-1-2">Node 1-1-2</label>
+                            <input type="checkbox" id="node-1-1-2" />
+                            <ul>
+                                <li>
+                                    <label for="node-1-1-1-1">Node 1-1-2-1</label>
+                                    <input type="checkbox" id="node-1-1-1-1" />
+                                </li>
+                            </ul>
+                        </li>
+                    </ul>
+                </li>
+                <li>
+                    <label for="node-1-2">Node 1-2</label>
+                    <input type="checkbox" id="node-1-2" />
+                </li>
+            </ul>
+        </li>
+    </ul>
+</div>
+<script>
+        const tree = document.getElementById("tree");
+        tree.addEventListener("change", function (event) {
+            const checkbox = event.target;
+            const checked = checkbox.checked;
+            const parentNode = checkbox.parentNode;
+            const subTree = parentNode.getElementsByTagName("ul")[0];
+
+            if (subTree) {
+                subTree.style.maxHeight = checked ? "500px" : "0";
+                subTree.style.display = checked ? "block" : "none";
+                subTree.style.padding = checked ? "0 0 0 20px" : "none";
+            }
+        });
+
+
+    </script>
+
+
+<style>
         #tree {
             font-family: sans-serif;
             font-size: 14px;
@@ -44,80 +161,4 @@
             max-height: 500px;
         }
     </style>
-</head>
-
-<body>
-
-    <!-- <div id="tree">
-        <ul>
-            <li>
-                <label for="node-1">Node 1</label>
-                <input type="checkbox" id="node-1" />
-                <ul>
-                    <li>
-                        <label for="node-1-1">Node 1-1</label>
-                        <input type="checkbox" id="node-1-1" />
-                        <ul>
-                            <li>
-                                <label for="node-1-1-1">Node 1-1-1</label>
-                                <input type="checkbox" id="node-1-1-1" />
-                                <ul>
-                                    <li>
-                                        <label for="node-1-1-1-1">Node 1-1-1-1</label>
-                                        <input type="checkbox" id="node-1-1-1-1" />
-                                    </li>
-                                </ul>
-                            </li>
-                            <li>
-                                <label for="node-1-1-2">Node 1-1-2</label>
-                                <input type="checkbox" id="node-1-1-2" />
-                            </li>
-                        </ul>
-                    </li>
-                    <li>
-                        <label for="node-1-2">Node 1-2</label>
-                        <input type="checkbox" id="node-1-2" />
-                    </li>
-                </ul>
-            </li>
-        </ul>
-    </div> -->
-
-    <ul class="main-menu-list">
-        <div id="underline"></div>
-        <a class="header-nav-link" href="home.html">
-            <li class="main-menu-item">Home</li>
-        </a>
-        <a class="header-nav-link" href="products.html">
-            <li class="main-menu-item">Shop</li>
-        </a>
-        <a class="header-nav-link" href="#">
-            <li class="main-menu-item">Brand</li>
-        </a>
-        <a class="header-nav-link" href="#">
-            <li class="main-menu-item">New Arrivals</li>
-        </a>
-        <a class="header-nav-link" href="#">
-            <li class="main-menu-item">Sale</li>
-        </a>
-    </ul>
-
-    <script>
-        const tree = document.getElementById("tree");
-        tree.addEventListener("change", function (event) {
-            const checkbox = event.target;
-            const checked = checkbox.checked;
-            const parentNode = checkbox.parentNode;
-            const subTree = parentNode.getElementsByTagName("ul")[0];
-
-            if (subTree) {
-                subTree.style.maxHeight = checked ? "500px" : "0";
-                subTree.style.display = checked ? "block" : "none";
-            }
-        });
-
-
-    </script>
-</body>
-
-</html>
+-->
