added UI for search name product page. UI view cart page

--- a/products.html
+++ b/products.html
@@ -206,7 +206,7 @@
 
                     <div class="product-list-container row">
 
-                        <div class="product-items col-3">
+                        <div class="product-items col-12 col-sm-6 col-md-4 col-xl-3">
                             <div class="product-img-wrap">
                                 <img class="product-img img-fluid" src="./assets/images/FreshOcean.png" alt="FreshOcean" >
                             </div>
@@ -218,7 +218,7 @@
                             </div>
                         </div>
 
-                        <div class="product-items col-3">
+                        <div class="product-items col-12 col-sm-6 col-md-4 col-xl-3">
                             <div class="product-img-wrap">
                                 <img class="product-img img-fluid" src="./assets/images/FreshOcean.png" alt="FreshOcean" >
                             </div>
@@ -230,7 +230,7 @@
                             </div>
                         </div>
 
-                        <div class="product-items col-3">
+                        <div class="product-items col-12 col-sm-6 col-md-4 col-xl-3">
                             <div class="product-img-wrap">
                                 <img class="product-img img-fluid" src="./assets/images/FreshOcean.png" alt="FreshOcean" >
                             </div>
@@ -242,7 +242,7 @@
                             </div>
                         </div>
 
-                        <div class="product-items col-3">
+                        <div class="product-items col-12 col-sm-6 col-md-4 col-xl-3">
                             <div class="product-img-wrap">
                                 <img class="product-img img-fluid" src="./assets/images/FreshOcean.png" alt="FreshOcean" >
                             </div>
@@ -254,7 +254,7 @@
                             </div>
                         </div>
 
-                        <div class="product-items col-3">
+                        <div class="product-items col-12 col-sm-6 col-md-4 col-xl-3">
                             <div class="product-img-wrap">
                                 <img class="product-img img-fluid" src="./assets/images/FreshOcean.png" alt="FreshOcean" >
                             </div>
@@ -266,7 +266,7 @@
                             </div>
                         </div>
 
-                        <div class="product-items col-3">
+                        <div class="product-items col-12 col-sm-6 col-md-4 col-xl-3">
                             <div class="product-img-wrap">
                                 <img class="product-img img-fluid" src="./assets/images/FreshOcean.png" alt="FreshOcean" >
                             </div>
@@ -278,7 +278,7 @@
                             </div>
                         </div>
 
-                        <div class="product-items col-3">
+                        <div class="product-items col-12 col-sm-6 col-md-4 col-xl-3">
                             <div class="product-img-wrap">
                                 <img class="product-img img-fluid" src="./assets/images/FreshOcean.png" alt="FreshOcean" >
                             </div>
@@ -290,7 +290,7 @@
                             </div>
                         </div>
 
-                        <div class="product-items col-3">
+                        <div class="product-items col-12 col-sm-6 col-md-4 col-xl-3">
                             <div class="product-img-wrap">
                                 <img class="product-img img-fluid" src="./assets/images/FreshOcean.png" alt="FreshOcean" >
                             </div>
@@ -302,7 +302,7 @@
                             </div>
                         </div>
 
-                        <div class="product-items col-3">
+                        <div class="product-items col-12 col-sm-6 col-md-4 col-xl-3">
                             <div class="product-img-wrap">
                                 <img class="product-img img-fluid" src="./assets/images/FreshOcean.png" alt="FreshOcean" >
                             </div>
@@ -314,7 +314,7 @@
                             </div>
                         </div>
 
-                        <div class="product-items col-3">
+                        <div class="product-items col-12 col-sm-6 col-md-4 col-xl-3">
                             <div class="product-img-wrap">
                                 <img class="product-img img-fluid" src="./assets/images/FreshOcean.png" alt="FreshOcean" >
                             </div>
@@ -326,7 +326,7 @@
                             </div>
                         </div>
 
-                        <div class="product-items col-3">
+                        <div class="product-items col-12 col-sm-6 col-md-4 col-xl-3">
                             <div class="product-img-wrap">
                                 <img class="product-img img-fluid" src="./assets/images/FreshOcean.png" alt="FreshOcean" >
                             </div>
@@ -338,7 +338,7 @@
                             </div>
                         </div>
 
-                        <div class="product-items col-3">
+                        <div class="product-items col-12 col-sm-6 col-md-4 col-xl-3">
                             <div class="product-img-wrap">
                                 <img class="product-img img-fluid" src="./assets/images/FreshOcean.png" alt="FreshOcean" >
                             </div>
@@ -350,7 +350,7 @@
                             </div>
                         </div>
 
-                        <div class="product-items col-3">
+                        <div class="product-items col-12 col-sm-6 col-md-4 col-xl-3">
                             <div class="product-img-wrap">
                                 <img class="product-img img-fluid" src="./assets/images/FreshOcean.png" alt="FreshOcean" >
                             </div>
@@ -362,7 +362,7 @@
                             </div>
                         </div>
 
-                        <div class="product-items col-3">
+                        <div class="product-items col-12 col-sm-6 col-md-4 col-xl-3">
                             <div class="product-img-wrap">
                                 <img class="product-img img-fluid" src="./assets/images/FreshOcean.png" alt="FreshOcean" >
                             </div>
@@ -374,7 +374,7 @@
                             </div>
                         </div>
 
-                        <div class="product-items col-3">
+                        <div class="product-items col-12 col-sm-6 col-md-4 col-xl-3">
                             <div class="product-img-wrap">
                                 <img class="product-img img-fluid" src="./assets/images/FreshOcean.png" alt="FreshOcean" >
                             </div>
@@ -386,7 +386,7 @@
                             </div>
                         </div>
 
-                        <div class="product-items col-3">
+                        <div class="product-items col-12 col-sm-6 col-md-4 col-xl-3">
                             <div class="product-img-wrap">
                                 <img class="product-img img-fluid" src="./assets/images/FreshOcean.png" alt="FreshOcean" >
                             </div>
@@ -398,7 +398,7 @@
                             </div>
                         </div>
 
-                        <div class="product-items col-3">
+                        <div class="product-items col-12 col-sm-6 col-md-4 col-xl-3">
                             <div class="product-img-wrap">
                                 <img class="product-img img-fluid" src="./assets/images/FreshOcean.png" alt="FreshOcean" >
                             </div>
@@ -410,7 +410,7 @@
                             </div>
                         </div>
 
-                        <div class="product-items col-3">
+                        <div class="product-items col-12 col-sm-6 col-md-4 col-xl-3">
                             <div class="product-img-wrap">
                                 <img class="product-img img-fluid" src="./assets/images/FreshOcean.png" alt="FreshOcean" >
                             </div>
@@ -422,7 +422,7 @@
                             </div>
                         </div>
 
-                        <div class="product-items col-3">
+                        <div class="product-items col-12 col-sm-6 col-md-4 col-xl-3">
                             <div class="product-img-wrap">
                                 <img class="product-img img-fluid" src="./assets/images/FreshOcean.png" alt="FreshOcean" >
                             </div>
@@ -434,7 +434,7 @@
                             </div>
                         </div>
 
-                        <div class="product-items col-3">
+                        <div class="product-items col-12 col-sm-6 col-md-4 col-xl-3">
                             <div class="product-img-wrap">
                                 <img class="product-img img-fluid" src="./assets/images/FreshOcean.png" alt="FreshOcean" >
                             </div>
