--- a/search-product-by-name.html
+++ b/search-product-by-name.html
@@ -87,10 +87,10 @@
                 <div class="search-product-container">
                     <div class="search-heading-page">
                         <div class="header-text-container">
-                            <div class="search-product-title">
+                            <div class="header-page-title">
                                 Search Products
                             </div>
-                            <div class="search-quantity-result">
+                            <div class="header-quantity-result">
                                 20 products have been found!!
                             </div>
                         </div>
